--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.13.3",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.2.2",
