--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/schedule": "^5.0.1",
     "@nestjs/sequelize": "^11.0.0",
     "@nestjs/swagger": "^11.0.6",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "date-fns": "^4.1.0",
+    "node-cron": "^3.0.3",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.13.3",
     "pg-hstore": "^2.3.4",
