--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.0.11",
     "@nestjs/schedule": "^5.0.1",
     "@nestjs/sequelize": "^11.0.0",
     "@nestjs/swagger": "^11.0.6",
+    "@nestjs/websockets": "^11.0.11",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
