--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,11 @@ services:
     env_file:
       - .env
     volumes:
-      - .:/app
-      - /app/node_modules
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
     ports:
       - "7000:7000"
       - "9229:9229"
-    command:
-      - npm run start:dev
     depends_on:
       - postgres
     restart: always
