--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,11 @@
     "target": "ES2021",
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./",
+    "baseUrl": "./src",
+    "paths": {
+      "@modules/*": ["modules/*"],
+      "@common/*": ["common/*"]
+    },
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": true,
