--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,17 @@
 services:
+  minio:
+    image: minio/minio:latest
+    container_name: minio
+    ports:
+      - "9000:9000"   # Web-интерфейс и S3 API
+      - "9001:9001"   # Панель управления MinIO
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin123
+    command: server /data --console-address ":9001"
+    volumes:
+      - minio_data:/data
+
   postgres:
     container_name: postgres
     image: postgres:15.2-alpine
@@ -32,3 +45,4 @@ services:
 
 volumes:
   postgres_db:
+  minio_data:
