--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.842.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
-    "@nestjs/platform-express": "^11.1.1",
+    "@nestjs/platform-express": "^11.1.3",
     "@nestjs/platform-socket.io": "^11.0.11",
     "@nestjs/schedule": "^5.0.1",
     "@nestjs/sequelize": "^11.0.0",
@@ -37,6 +38,7 @@
     "class-validator": "^0.14.1",
     "cls-hooked": "^4.2.2",
     "date-fns": "^4.1.0",
+    "multer": "^2.0.1",
     "node-cron": "^3.0.3",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.13.3",
